--- a/App.xaml
+++ b/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="FastMenu.App"
+<Application x:Class="FastMenu.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:FastMenu">
